--- a/style.css
+++ b/style.css
@@ -5,4 +5,17 @@
     padding: 0;
     box-sizing: border-box;
     border: none;
+    outline: none;
+}
+
+body {
+    background-color: rgb(116, 0, 214);
+}
+
+.container {
+    max-width: 1400px;
+    display: block;
+    margin: 0 auto;
+    padding: 0 3%;
+    
 }
