--- a/style.css
+++ b/style.css
@@ -68,3 +68,63 @@ menu .list-menu a {
 menu .list-menu a:hover {
     color: rgb(231, 191, 241);
 }
+
+main {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .left-content {
+    color: white;
+    width: 50%;
+    padding: 20px;
+}
+
+main .left-content h1 {
+    font-size: 4em;
+    font-weight: lighter;
+    letter-spacing: 1px;
+}
+
+main .left-content p {
+    font-size: 22px;
+    margin: 40px 0;
+}
+
+main .left-button button {
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1em;
+    margin: 10px;
+    border-radius: 20px;
+    font-weight: 500;
+    box-shadow: 0 20px 35px rgba(0, 0, 0.10%), 0 15px 12px rgb(0, 0, 0), 8%;
+}
+
+main .left-button button:first-child {
+    background-color: rgb(192, 115, 255);
+    color: rgb(19, 6, 42);
+    transition: all .5s;
+}
+
+main .left-button button:first-child:hover {
+    background-color: rgb(161, 59, 255);
+    color: white;
+}
+
+main .left-button button:nth-child(2) {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+}
+
+main .left-button button:nth-child(2):hover {
+    background-color: white;
+    color: rgb(116, 0, 245);
+}
+
+main .right-content {
+    padding: 50px;
+}
