--- a/media-query.css
+++ b/media-query.css
@@ -1,5 +1,46 @@
 @charset "UTF-8";
 
 @media screen and (max-width: 800px) {
-    
+    menu > .list-menu > .close-icon,
+    header .menu-icon {
+        display: block;
+    }
+
+    menu > .list-menu {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transform: translateX(100%);
+        transition: transform 0.5s;
+        background-color: rgb(116, 0, 214);
+    }
+
+    menu .list-menu li {
+        font-size: 30px;
+    }
+
+    main {
+        flex-wrap: wrap;
+    }
+
+    main .left-content {
+        width: 100%;
+        text-align: center;
+        padding: 50px;
+    }
+
+    main .left-content h1 {
+        font-size: 3em;
+    }
+
+    main .right-content {
+        width: 100%;
+        margin: 50px 10px;
+    }
 }
